<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/icon_size"
    android:background="?attr/backgroundHeader"
    app:flow_horizontalGap="20dp"
    tools:context=".ui.message.headers.MessageHeaderFragment">

    <ImageButton
        android:id="@+id/image_button_search"
        android:layout_width="@dimen/icon_size"
        android:layout_height="match_parent"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/search_icon"
        android:src="@drawable/ic_white_search"
        android:stateListAnimator="@animator/button_opacity_animator" />

    <TextView
        android:id="@+id/text_search"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/gap_item_in_linear_layout"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/hint_search"
        android:textColorHint="@color/white" />

    <ImageButton
        android:id="@+id/image_button_add_user"
        android:layout_width="@dimen/icon_size"
        android:layout_height="match_parent"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/qr_icon"
        android:src="@drawable/ic_white_add_user"
        android:stateListAnimator="@animator/button_opacity_animator" />
</LinearLayout>