<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_800"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="15dp"
                app:cardCornerRadius="150dp">

                <ImageView
                    android:id="@+id/image_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_room_chat_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.25"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/icon_size_md"
                        android:layout_height="@dimen/icon_size_md"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_search" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/find"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/message"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.25"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/icon_size_md"
                        android:layout_height="@dimen/icon_size_md"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/page"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/personal"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.25"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/icon_size_md"
                        android:layout_height="@dimen/icon_size_md"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_paint" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/background_image"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.25"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/icon_size_md"
                        android:layout_height="@dimen/icon_size_md"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_bell" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/turn_off"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notify"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_small" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>