<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.inputpassword.InputPasswordActivity">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="@dimen/xsmall"
        android:layout_marginTop="@dimen/xsmall"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/input_password_for_this_phone_number"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back" />

    <TextView
        android:id="@+id/text_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium"
        android:layout_marginTop="@dimen/small"
        android:textAlignment="center"
        android:textSize="@dimen/text_h2"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <LinearLayout
        android:id="@+id/layout_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium"
        android:layout_marginTop="@dimen/medium"
        android:background="@drawable/border_pnca_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_phone_number">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:hint="@string/input_password"
            android:inputType="textPassword" />

        <ImageButton
            android:id="@+id/button_show_or_hidden_password"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="@dimen/xsmall"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_eye" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium"
        android:layout_marginTop="@dimen/medium"
        android:background="@drawable/bg_button_continue"
        android:enabled="false"
        android:text="@string/text_continue"
        android:textAllCaps="false"
        android:textColor="@color/gray_500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/forget_password"
        android:textColor="@color/blue_700"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>